# BAREWRITE

./: log.txt  main.py  pyproject.toml
cogs/: Helpcog.py  Moderation.py  Modmail.py  OWNERSONLY.py  Others.py  background.py  lockdown.py  logging.py  music.py  redcogs.py
