[tool.poetry]
name = "repl_python3_botpy"
version = "0.1.0"
description = "BA Bot rewrite version(we have spaghetti code in the first version)"
authors = ["Dragon!#0001"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^1.1.2"
youtube-dl = "^2020.9.14"
lavalink = "^3.1.2"
praw = "^7.1.0"
wavelink = "^0.9.6"
replit = "^2.0.0"
apscheduler = "^3.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
